chore(jdk17): bring a jdk11+ version of scala & spark libraries + perform the required JRE module opens when testing (affects Hazelcast too)